# cogames

./: .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile.coworld  Dockerfile.episode_runner  MAKING_A_COGAME.md  MISSION.md  POLICY_SECRETS.md  README.ipynb  README.md  README.py  TECHNICAL_MANUAL.md  autoresearch-director.md  autoresearch.md  autoresearch_19_results.csv  autoresearch_21_march.md  pyproject.toml
.claude/agents/autoresearch-director/: autoresearch-director.md
.claude/agents/autoresearch-director-offline-score/: autoresearch-director.md
.claude/agents/autoresearch-director-offline-to-online/: autoresearch-director-offline-to-online.md
.claude/agents/autoresearcher/: autoresearcher.md
.claude/skills/cogames-issues/: SKILL.md
.claude/skills/cogames-softmax-online/: SKILL.md
.claude/skills/cogames-watch-replay/: SKILL.md
.ralph/: ralph-history.json  ralph-loop.state.json
benchmarks/perf/: perf_benchmark.py
devops/dx-qa/: Dockerfile.dx-qa  README.md  dx-qa-test.bats  entrypoint.sh  run-dx-qa-local.sh
docs/: autoresearch_19_march.md  autoresearch_21_march.md  autoresearch_22_march.md  autoresearch_issue-16-hub-depletion-awareness.md  autoresearch_issue12_gear_acquisition_reliability.md  autoresearch_issue9_cross_role_policy.md  global_protocol_spec.md  player_protocol_spec.md  results_autoresearch_21_march.tsv  results_autoresearch_22_march.tsv  results_autoresearch_issue-16-hub-depletion-awareness.tsv  results_autoresearch_issue12_gear_acquisition_reliability.tsv  results_autoresearch_issue9_cross_role_policy.tsv  reward_protocol_spec.md  voyager_design.md  voyager_paper.md
docs/autoresearch_director/: frames.txt  latest_replay.json.z  notes.md
docs/ftue/: terminal-build.md
scripts/: benchmark_local_vs_cloud.py  capture_frames.py  download_nemotron.py  generate_coworld_schemas.py  generate_models.py  plot_autoresearch_progress.py  run_evaluation.py  run_local_mission.py  test_local_mission_mock.py  test_shared_map.py
src/cogames/: __init__.py  __main__.py  auth.py  core.py  curricula.py  device.py  diagnose.py  display_detect.py  evaluate.py  game.py  main.py  optional_deps.py  perform_login.py  pickup.py  play.py  replays.py  seed.py  softmax_cli.py  standalone_games.py  token_storage.py  train.py  variants.py  verbose.py
src/cogames.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cogames/cli/: _model_base.py  assay.py  auth.py  base.py  bitworld.py  client.py  compat.py  episode.py  generated_models.py  leaderboard.py  matches.py  mission.py  player.py  policy.py  season.py  submit.py  utils.py
src/cogames/cogs_vs_clips/: aligner_tutorial.py  buildings.py  clip_difficulty.py  clips.py  cog.py  cogs_vs_clips_mapgen.md  cogsguard_curriculum.py  cogsguard_reward_variants.py  cogsguard_tutorial.py  config.py  days.py  energy.py  hub.py  junction.py  machina_1_variant.py  miner_tutorial.py  mission.py  missions.py  procedural.py  render.py  reward_variants.py  scout_tutorial.py  scrambler_tutorial.py  ship.py  ships.py  sites.py  solar.py  stations.py  team.py  terrain.py  variants.py  weather.py
src/cogames/coworld/: COGAME_README.md  COWORLD_README.md  EXECUTOR_README.md  __init__.py  __main__.py  certifier.py  cli.py  coworld_manifest_schema.json  episode_request_schema.json  episode_runner.py  executor.py  manifest_uri.py  manifest_validation.py  play.py  schema_validation.py  types.py  upload.py
src/cogames/docs/: AMONGTHEM_POLICY.md  MISSION.md  SCRIPTED_AGENT.md  TECHNICAL_MANUAL.md
src/cogames/games/: __init__.py
src/cogames/maps/: canidate1_1000.map  canidate1_1000_stations.map  canidate1_500.map  canidate1_500_stations.map  canidate2_1000.map  canidate2_1000_stations.map  canidate2_500.map  canidate2_500_stations.map  canidate3_1000.map  canidate3_1000_stations.map  canidate3_500.map  canidate4_500.map  (+20 more)
src/metta_alo/: pure_single_episode_runner.py  rollout.py  scoring.py
tests/: BUILD.bazel  _test_support.py  conftest.py  test_aligner_agent.py  test_all_games_describe.py  test_all_games_eval.py  test_amongthem_policy_template.py  test_arena_station_order.py  test_assay_cli.py  test_auth_compat.py  test_auth_login.py  test_bitworld_cli.py  test_cli.py  test_cli_mission_parity.py  test_cli_play_parity.py  test_cli_test_support.py  test_client.py  test_clip_takeover_events.py  test_cognitive_substrate_evals.py  test_cogs_vs_clips.py  test_cogs_vs_clips_coworld.py  test_cogs_vs_clips_policy_player.py  test_cogsguard_eval_missions.py  test_cogsguard_llm_contract.py  test_cogsguard_machina1_base_junction_alignment.py  test_compat_check.py  test_coworld_certifier.py  test_coworld_cli_manifest_uri.py  test_coworld_kubernetes_runner.py  test_coworld_manifest_uri.py  test_coworld_upload_cli.py  test_cvc_eval_missions.py  test_cvc_machina1_base_junction_alignment.py  test_diagnose_stage1.py  test_energy_solar_days_variants.py  test_episode_runner_compat.py  test_forced_role_vibes_variant.py  test_game_version.py  test_gui_display_guard.py  test_leaderboard_cli.py  (+31 more)
tests/docsync/: conftest.py  test_docsync_all.py  test_docsync_nb_to_md.py  test_docsync_nb_to_py.py
tests/metta_alo/: test_scoring.py
tests/variants/: conftest.py  test_aligner.py  test_clips.py  test_forced_role_vibes.py  test_gear_stations.py  test_miner.py  test_reward_milestones.py  test_reward_role_conditional.py  test_scout.py  test_scrambler.py  test_variant_configs.py
tutorials/: .gitkeep  01_MAKE_POLICY.ipynb  01_MAKE_POLICY.md  01_MAKE_POLICY.py  01_goal_delivery.ipynb  02_TRAIN.ipynb  02_TRAIN.md  02_TRAIN.py  02_simple_assembly.ipynb  03_SUBMIT.ipynb  03_SUBMIT.md  03_SUBMIT.py  03_full_cycle_multiagent.ipynb  COGAMES_OVERVIEW.ipynb  COGAMES_OVERVIEW.md  COGAMES_OVERVIEW.py  COMPLETION_SUMMARY.md  Dockerfile  IMPLEMENTATION_NOTES.md  NOTEBOOK2_SUMMARY.md  PLANNING.md  QUICKSTART.md  README.md  STAGES.md  STATUS.md  TRAIN_ALIGNER.ipynb  TRAIN_ALIGNER.md  TRAIN_ALIGNER.py  TRAIN_MINER.ipynb  TRAIN_MINER.md  TRAIN_MINER.py  TRAIN_SCOUT.ipynb  TRAIN_SCOUT.md  TRAIN_SCOUT.py  TRAIN_SCRAMBLER.ipynb  TRAIN_SCRAMBLER.md  TRAIN_SCRAMBLER.py  tutorial_viz.py
(+214 files in other folders)
