load("//tools:pytest.bzl", "pytest_test")

# Every test file under packages/cogames/tests/ exposed as its own
# pytest_test. conftest.py + _test_support.py travel with each target so
# pytest fixtures resolve the same way as `metta pytest`.
#
# Many cogames tests spawn subprocesses or talk to external services.
# Tagged `requires-network` + `no-sandbox` so the test inherits the host
# environment; on hosts without network these targets will skip or
# fail at fixture setup, which is expected.
_TEST_FILES = glob(
    ["test_*.py"],
    allow_empty = False,
)

# Tests that don't yet pass under bazel. Each is a real test issue that
# needs per-test attention rather than a blanket workaround:
#   * test_diagnose_stage1: spawned `python -c` subprocess can't import
#     cogames because it doesn't inherit PYTHONPATH from the runfiles
#     tree. Same fix as test_arena_station_order's PYTHONPATH-forwarding,
#     applied to the test's subprocess invocation.
#   * test_cli_play_parity: writes scripted-policy template to a path
#     that's read-only inside the bazel runfiles tree. Test needs to
#     route the write through a tmp_path fixture.
#   * test_starter_role_policy_behavior: one assertion expects cogsguard
#     to have registered a `machina_1` variant by the time the test runs;
#     under bazel's import isolation this registration order differs.
#     Likely needs an explicit `import cogsguard.missions.machina_1` at
#     test setup.
#   * test_train_integration::test_make_policy_scripted_runs: writes the
#     policy file outside the runfiles sandbox. Same fix as
#     test_cli_play_parity — route through tmp_path.
#
# Targets are still buildable and explicitly runnable
# (`bazel test //packages/cogames/tests:<name>`); the `manual` tag just
# excludes them from `//...` expansions until each is fixed.
_KNOWN_BROKEN = [
    "test_cli_play_parity",
    "test_diagnose_stage1",
    "test_starter_role_policy_behavior",
    "test_train_integration",
]

_SHARED_SRCS = ["conftest.py", "_test_support.py"] + glob(
    ["__init__.py"],
    allow_empty = True,
)

[
    pytest_test(
        name = test_file.removesuffix(".py"),
        srcs = [test_file] + _SHARED_SRCS,
        args = [
            "--rootdir=packages/cogames/tests",
            "--confcutdir=packages/cogames/tests",
            "--import-mode=importlib",
            "-p",
            "no:importnb",
            "-o",
            "addopts=",
            "-o",
            "pythonpath=",
        ],
        tags = [
            "no-sandbox",
            "requires-network",
        ] + (["manual"] if test_file.removesuffix(".py") in _KNOWN_BROKEN else []),
        deps = [
            "//packages/cogames:cogames",
            "@pyenv//:cogsguard",
            "@pyenv//:pytest",
        ],
    )
    for test_file in _TEST_FILES
]
